--- a/wei_xin/lesson_1/project.config.json
+++ b/wei_xin/lesson_1/project.config.json
@@ -13,18 +13,11 @@
 	"compileType": "miniprogram",
 	"libVersion": "2.3.0",
 	"appid": "wxeb031e121f785835",
-	"projectname": "weixin_xcx",
-	"svr": "/",
-	"client": "/",
-	"qcloudRoot": "/",
-	"miniprogramRoot": "/",
-	"cloudfunctionRoot": "/",
-	"jsserverRoot": "/",
-	"pluginRoot": "/",
+	"projectname": "lesson_1",
 	"debugOptions": {
 		"hidedInDevtools": []
 	},
-	"scripts": {},
+	"isGameTourist": false,
 	"condition": {
 		"search": {
 			"current": -1,
@@ -34,11 +27,8 @@
 			"current": -1,
 			"list": []
 		},
-		"plugin": {
-			"current": -1,
-			"list": []
-		},
 		"game": {
+			"currentL": -1,
 			"list": []
 		},
 		"miniprogram": {
